--- a/fairness.ipynb
+++ b/fairness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4          sad  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_18105/1742237735.py:6: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_25791/1742237735.py:6: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  accuracy_by_race = df.groupby(\"race_true\").apply(\n"
      ]
     },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_18105/4131533735.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_25791/4131533735.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  age_accuracy_by_race = df.groupby(\"race_true\").apply(\n"
      ]
     },
@@ -246,6 +246,35 @@
     "plt.ylim(0, 100)\n",
     "plt.savefig(\"figures/age_accuracy.png\", bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest difference for a predicted emotion class between race groups is for 'neutral' with a difference of 13.57%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the largest difference for a predicted emotion class between race groups\n",
+    "emotion_diff_by_race = (\n",
+    "    emotion_distribution_by_race_percentage.max()\n",
+    "    - emotion_distribution_by_race_percentage.min()\n",
+    ")\n",
+    "\n",
+    "# Find the emotion with the largest difference\n",
+    "largest_diff_emotion = emotion_diff_by_race.idxmax()\n",
+    "largest_diff_value = emotion_diff_by_race.max()\n",
+    "\n",
+    "print(\n",
+    "    f\"The largest difference for a predicted emotion class between race groups is for '{largest_diff_emotion}' with a difference of {largest_diff_value:.2f}%\"\n",
+    ")"
    ]
   }
  ],
